section 4 and 5 buttons added, scrollbar fixed

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,3 +1,5 @@
 footer{
-    margin-top: 85%;
+    color: rgb(192, 201, 200);
+     margin-top: 800px;
+     background-color: $grey; 
 }
