--- a/styles/_sectionFive.scss
+++ b/styles/_sectionFive.scss
@@ -1,6 +1,6 @@
 .sectionFive{
   @extend .sectionFour;
-  margin-top: 40%;
+  margin-top: 300px;
   float: right;
 
   h1{
